--- a/src/main/resources/templates/user/fragments/footer.html
+++ b/src/main/resources/templates/user/fragments/footer.html
@@ -33,13 +33,7 @@
               </ul>
             </div>
             <div class="widget">
-              <ul class="social_icons rounded_social">
-                <li><a href="#" class="sc_facebook"><i class="ion-social-facebook"></i></a></li>
-                <li><a href="#" class="sc_twitter"><i class="ion-social-twitter"></i></a></li>
-                <li><a href="#" class="sc_google"><i class="ion-social-googleplus"></i></a></li>
-                <li><a href="#" class="sc_youtube"><i class="ion-social-youtube-outline"></i></a></li>
-                <li><a href="#" class="sc_instagram"><i class="ion-social-instagram-outline"></i></a></li>
-              </ul>
+
             </div>
           </div>
           <div class="col-lg-2 col-md-3 col-sm-6">
@@ -88,12 +82,25 @@
             <p class="mb-md-0 text-center text-md-start">Copyright © SHIFT 3 | All Rights Reserved</p>
           </div>
           <div class="col-md-6">
-            <ul class="footer_payment text-center text-md-end">
-              <li><a href="#"><img th:src="@{/user/assets/images/visa.png}" alt="visa"></a></li>
-              <li><a href="#"><img th:src="@{/user/assets/images/discover.png}" alt="discover"></a></li>
-              <li><a href="#"><img th:src="@{/user/assets/images/master_card.png}" alt="master_card"></a></li>
-              <li><a href="#"><img th:src="@{/user/assets/images/paypal.png}" alt="paypal"></a></li>
-              <li><a href="#"><img th:src="@{/user/assets/images/amarican_express.png}" alt="amarican_express"></a></li>
+            <ul class="footer_sns footer_payment text-center text-md-end">
+              <li><a href="#"><img th:src="@{/user/assets/images/icon_facebook_white.png}" alt="facebook"></a></li>
+              <li><a href="https://www.instagram.com/shift3_official/"><img th:src="@{/user/assets/images/icon_instagram_white.png}" alt="instagram"></a></li>
+              <li><a href="#"><img th:src="@{/user/assets/images/icon_twitter_white.png}" alt="twitter"></a></li>
+
+<!--              <ul class="social_icons rounded_social">-->
+<!--                <li><a href="#"><i class="logo-facebook"></i></a></li>-->
+<!--                <ion-icon name="logo-facebook"></ion-icon>-->
+<!--                <li><a href="#" class="sc_twitter"><i class="ion-"></i></a></li>-->
+<!--                <li><a href="#" class="sc_google"><i class="ion-social-googleplus"></i></a></li>-->
+<!--                <li><a href="#" class="sc_youtube"><i class="ion-social-youtube-outline"></i></a></li>-->
+<!--                <li><a href="#" class="sc_instagram"><i class="ion-social-instagram-outline"></i></a></li>-->
+<!--              </ul>-->
+
+<!--              <li><a href="#"><img th:src="@{/user/assets/images/visa.png}" alt="visa"></a></li>-->
+<!--              <li><a href="#"><img th:src="@{/user/assets/images/discover.png}" alt="discover"></a></li>-->
+<!--              <li><a href="#"><img th:src="@{/user/assets/images/master_card.png}" alt="master_card"></a></li>-->
+<!--              <li><a href="#"><img th:src="@{/user/assets/images/paypal.png}" alt="paypal"></a></li>-->
+<!--              <li><a href="#"><img th:src="@{/user/assets/images/amarican_express.png}" alt="amarican_express"></a></li>-->
             </ul>
           </div>
         </div>
