--- a/src/main/resources/templates/user/fragments/head.html
+++ b/src/main/resources/templates/user/fragments/head.html
@@ -41,5 +41,9 @@
     <link rel="stylesheet" th:href="@{/user/assets/css/style.css}">
     <link rel="stylesheet" th:href="@{/user/assets/css/custom-style.css}">
     <link rel="stylesheet" th:href="@{/user/assets/css/responsive.css}">
+
+<!--    <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.esm.js"></script>-->
+<!--    <script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.js"></script>-->
+<!--    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ionic/core/css/ionic.bundle.css" />-->
   </head>
 </html>
