서비스 소개 페이지 생성

--- a/src/main/resources/templates/user/content/main.html
+++ b/src/main/resources/templates/user/content/main.html
@@ -2,6 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{/user/layout/default_layout}" lang="ko">
 	<div layout:fragment="content" class="content">
 
+		<div th:replace="/user/fragments/banner :: banner"></div>
+
 	<!-- START 최근 피드 -->
 	<div class="section small_pt pb_20">
 		<div class="container">
