--- a/src/main/resources/templates/user/fragments/header.html
+++ b/src/main/resources/templates/user/fragments/header.html
@@ -49,7 +49,7 @@
                 </ul>
               </div>
             </li>
-            <li><a class="nav-link nav_item" href="contact.html">서비스 소개</a></li>
+            <li><a class="nav-link nav_item" href="/introduce">서비스 소개</a></li>
           </ul>
         </div>
         <ul class="navbar-nav attr-nav align-items-center">
