--- a/src/main/resources/templates/user/fragments/footer.html
+++ b/src/main/resources/templates/user/fragments/footer.html
@@ -38,29 +38,42 @@
           </div>
           <div class="col-lg-2 col-md-3 col-sm-6">
             <div class="widget">
-              <h6 class="widget_title">Useful Links</h6>
+              <h6 class="widget_title">소메뉴</h6>
               <ul class="widget_links">
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">FAQ</a></li>
-                <li><a href="#">Location</a></li>
-                <li><a href="#">Affiliates</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#">메뉴명</a></li>
+                <li><a href="#">메뉴명</a></li>
+                <li><a href="#">메뉴명</a></li>
+                <li><a href="#">메뉴명</a></li>
+                <li><a href="#">메뉴명</a></li>
               </ul>
             </div>
           </div>
           <div class="col-lg-2 col-md-3 col-sm-6">
             <div class="widget">
-              <h6 class="widget_title">My Account</h6>
+              <h6 class="widget_title">소메뉴</h6>
               <ul class="widget_links">
-                <li><a href="#">My Account</a></li>
-                <li><a href="#">Discount</a></li>
-                <li><a href="#">Returns</a></li>
-                <li><a href="#">Orders History</a></li>
-                <li><a href="#">Order Tracking</a></li>
+                <li><a href="#">메뉴명</a></li>
+                <li><a href="#">메뉴명</a></li>
+                <li><a href="#">메뉴명</a></li>
+                <li><a href="#">메뉴명</a></li>
               </ul>
             </div>
           </div>
-          <div class="col-lg-4 col-md-12 col-sm-12">
+
+          <div class="col-lg-2 col-md-3 col-sm-6">
+            <div class="widget">
+              <h6 class="widget_title">소메뉴</h6>
+              <ul class="widget_links">
+                <li><a href="#">메뉴명</a></li>
+                <li><a href="#">메뉴명</a></li>
+                <li><a href="#">메뉴명</a></li>
+                <li><a href="#">메뉴명</a></li>
+                <li><a href="#">메뉴명</a></li>
+                <li><a href="#">메뉴명</a></li>
+              </ul>
+            </div>
+          </div>
+<!--          <div class="col-lg-4 col-md-12 col-sm-12">
             <div class="widget">
               <h6 class="widget_title">Subscribe Our Newsletter</h6>
               <p>If you want to get an email from us every time we have a new special offer, then sign up here!</p>
@@ -71,7 +84,7 @@
                 </form>
               </div>
             </div>
-          </div>
+          </div>-->
         </div>
       </div>
     </div>
@@ -86,21 +99,6 @@
               <li><a href="#"><img th:src="@{/user/assets/images/icon_facebook_white.png}" alt="facebook"></a></li>
               <li><a href="https://www.instagram.com/shift3_official/"><img th:src="@{/user/assets/images/icon_instagram_white.png}" alt="instagram"></a></li>
               <li><a href="#"><img th:src="@{/user/assets/images/icon_twitter_white.png}" alt="twitter"></a></li>
-
-<!--              <ul class="social_icons rounded_social">-->
-<!--                <li><a href="#"><i class="logo-facebook"></i></a></li>-->
-<!--                <ion-icon name="logo-facebook"></ion-icon>-->
-<!--                <li><a href="#" class="sc_twitter"><i class="ion-"></i></a></li>-->
-<!--                <li><a href="#" class="sc_google"><i class="ion-social-googleplus"></i></a></li>-->
-<!--                <li><a href="#" class="sc_youtube"><i class="ion-social-youtube-outline"></i></a></li>-->
-<!--                <li><a href="#" class="sc_instagram"><i class="ion-social-instagram-outline"></i></a></li>-->
-<!--              </ul>-->
-
-<!--              <li><a href="#"><img th:src="@{/user/assets/images/visa.png}" alt="visa"></a></li>-->
-<!--              <li><a href="#"><img th:src="@{/user/assets/images/discover.png}" alt="discover"></a></li>-->
-<!--              <li><a href="#"><img th:src="@{/user/assets/images/master_card.png}" alt="master_card"></a></li>-->
-<!--              <li><a href="#"><img th:src="@{/user/assets/images/paypal.png}" alt="paypal"></a></li>-->
-<!--              <li><a href="#"><img th:src="@{/user/assets/images/amarican_express.png}" alt="amarican_express"></a></li>-->
             </ul>
           </div>
         </div>
