--- a/src/main/resources/static/user/assets/css/custom-style.css
+++ b/src/main/resources/static/user/assets/css/custom-style.css
@@ -47,3 +47,32 @@ body{
     width: 2rem;
     margin-left: 0.8rem;
 }
+
+.intro_section{
+    padding: 80px 0;
+    background-color: lightgray;
+    color: black;
+    text-align-last: center;
+}
+
+.intro_section .title{
+    font-size: 2rem;
+    font-weight: 400;
+}
+
+.intro_section .subtitle{
+    font-size: 1rem;
+    font-weight: 250;
+}
+
+.section .title{
+    color: black;
+    font-size: 1.88rem;
+    font-weight: 390;
+}
+
+.section .subtitle{
+    color: black;
+    font-size: 1rem;
+    font-weight: 300;
+}
