로그인 페이지 뼈대 형성

--- a/src/main/resources/static/user/assets/css/custom-style.css
+++ b/src/main/resources/static/user/assets/css/custom-style.css
@@ -76,3 +76,12 @@ body{
     font-size: 1rem;
     font-weight: 300;
 }
+
+.sns-login div{
+    padding: 10px
+}
+
+.sns-login img {
+    width: 2rem;
+    margin-right: 0.5rem;
+}
