--- a/src/main/resources/templates/user/fragments/header.html
+++ b/src/main/resources/templates/user/fragments/header.html
@@ -43,7 +43,7 @@
                   <li><a class="dropdown-item nav-link nav_item" href="contact.html">Contact Us</a></li>
                   <li><a class="dropdown-item nav-link nav_item" href="faq.html">Faq</a></li>
                   <li><a class="dropdown-item nav-link nav_item" href="404.html">404 Error Page</a></li>
-                  <li><a class="dropdown-item nav-link nav_item" href="login.html">Login</a></li>
+                  <li><a class="dropdown-item nav-link nav_item" href="login">Login</a></li>
                   <li><a class="dropdown-item nav-link nav_item" href="signup.html">Register</a></li>
                   <li><a class="dropdown-item nav-link nav_item" href="term-condition.html">Terms and Conditions</a></li>
                 </ul>
@@ -68,7 +68,7 @@
             </button>
 
             <button class="btn btn-white navbar-button navbar-login-btn">
-              로그인
+              <a href="/login">로그인</a>
             </button>
 
           </li>
