--- a/src/main/resources/templates/user/fragments/header.html
+++ b/src/main/resources/templates/user/fragments/header.html
@@ -35,8 +35,9 @@
         <div class="collapse navbar-collapse justify-content-start" id="navbarSupportedContent">
           <ul class="navbar-nav">
             <li><a class="nav-link nav_item" href="contact.html">컨텐츠</a></li>
-            <li class="dropdown">
-              <a class="dropdown-toggle nav-link" href="#" data-bs-toggle="dropdown">편집샵 목록</a>
+            <li><a class="nav-link nav_item" href="/shop-list">편집샵 목록</a></li>
+            <!--<li class="dropdown">
+              <a class="dropdown-toggle nav-link" href="/shop-list" data-bs-toggle="dropdown">편집샵 목록</a>
               <div class="dropdown-menu">
                 <ul>
                   <li><a class="dropdown-item nav-link nav_item" href="about.html">About Us</a></li>
@@ -48,7 +49,7 @@
                   <li><a class="dropdown-item nav-link nav_item" href="term-condition.html">Terms and Conditions</a></li>
                 </ul>
               </div>
-            </li>
+            </li>-->
             <li><a class="nav-link nav_item" href="/introduce">서비스 소개</a></li>
           </ul>
         </div>
