--- a/src/main/resources/templates/user/layout/default_layout.html
+++ b/src/main/resources/templates/user/layout/default_layout.html
@@ -3,6 +3,9 @@
 
 <head th:replace="/user/fragments/head :: headFragment"></head>
 
+<th:block layout:fragment="script"></th:block>
+<th:block layout:fragment="css"></th:block>
+
 	<!-- include libraries(jQuery, bootstrap) -->
 <!--	<script type="text/javascript" src="//code.jquery.com/jquery-3.6.0.min.js"></script>-->
 <!--	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>-->
@@ -72,7 +75,6 @@
 	<script th:src="@{/user/assets/js/jquery.elevatezoom.js}"></script>
 	<!-- scripts js -->
 	<script th:src="@{/user/assets/js/scripts.js}"></script>
-
 </body>
 
 <footer th:replace="/user/fragments/footer :: footerFragment"></footer>
