편집샵 목록 반응형 추가

--- a/src/main/resources/templates/user/content/pages/shop-list.html
+++ b/src/main/resources/templates/user/content/pages/shop-list.html
@@ -28,9 +28,9 @@
     </script>
 
     <div class="container-fluid shop_list">
-        <div class="row h-100">
-            <div class="col-3 p-4">
-                <span class="title mb-2">지도</span>
+        <div class="row d-flex flex-wrap h-100">
+            <div class="col-md-3 col-sm-12 p-4">
+                <div class="title mb-2">지도</div>
                 <br/>
 
                 <form>
@@ -41,9 +41,10 @@
 
 
                 <div class="menu mb-3">
-                    <span class="name mb-3">
+                    <div class="name mb-1">
                         지역
-                    </span>
+                    </div>
+
 
 
                     <div class="product_size_switch address_filter">
@@ -72,9 +73,9 @@
 
 
                 <div class="menu mb-3">
-                    <span class="name mb-3">
+                    <div class="name mb-1">
                         필터
-                    </span>
+                    </div>
 
 
                     <div class="product_size_switch sort_filter">
@@ -86,13 +87,13 @@
 
 
                 <div class="menu mb-3">
-                    <span class="name mb-3">
+                    <div class="name mb-1">
                         검색 결과
-                    </span>
+                    </div>
 
                 </div>
             </div>
-            <div class="col-9">
+            <div class="col-md-9 col-sm-12">
                 <div id="naverMap" class="w-100 h-100"></div>
             </div>
         </div>
