--- a/src/main/resources/templates/user/content/login.html
+++ b/src/main/resources/templates/user/content/login.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
       layout:decorate="~{/user/layout/default_layout}" lang="ko">
 
     <div layout:fragment="content" class="content">
 
-        <div class="login_register_wrap section">
+        <div class="login_register_wrap section" sec:authorize="!isAuthenticated()">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-xl-6 col-md-10">
@@ -14,23 +15,25 @@
                                     <h3>안녕하세요!</h3>
                                     <span>SHIFT3에 오신 것을 환영합니다.</span>
                                 </div>
-                                <form method="post">
+                                <form th:action="@{/login.do}" method="post">
                                     <div class="form-group mb-3">
-                                        <input type="text" required="" class="form-control" name="email" placeholder="이메일">
+                                        <input type="text" class="form-control" id="username" name="username" placeholder="이메일" required autofocus>
                                     </div>
                                     <div class="form-group mb-3">
-                                        <input class="form-control" required="" type="password" name="password" placeholder="비밀번호">
+                                        <input class="form-control" type="password" id="password"
+                                               name="password" placeholder="비밀번호" required>
                                     </div>
                                     <div class="login_footer form-group mb-3">
                                         <div class="chek-form">
                                             <div class="custome-checkbox">
-                                                <input class="form-check-input" type="checkbox" name="checkbox" id="exampleCheckbox1" value="">
-                                                <label class="form-check-label" for="exampleCheckbox1"><span>아이디 저장하기</span></label>
+                                                <input class="form-check-input" type="checkbox" name="checkbox" id="emailSaveCheckbox" value="">
+                                                <label class="form-check-label" for="emailSaveCheckbox"><span>이메일 저장하기</span></label>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="form-group mb-3">
                                         <button type="submit" class="btn btn-fill-out btn-block" name="login">Log in</button>
+                                        <p class="text-danger" th:if="${param.error}" th:text="'잘못된 이메일 혹은 비밀번호입니다.'"></p>
                                     </div>
                                 </form>
                                 <div class="different_login">
@@ -56,6 +59,10 @@
                     </div>
                 </div>
             </div>
+        </div>
+
+        <div class="login_register_wrap section" sec:authorize="isAuthenticated()">
+            <h3>이미 로그인 되어 있습니다.</h3>
         </div>
     </div>
 
