--- a/src/main/resources/templates/user/fragments/header.html
+++ b/src/main/resources/templates/user/fragments/header.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="ko"
+      xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <!-- START HEADER -->
 <header class="header_wrap fixed-top header_with_topbar" th:fragment="headerFragment">
 <!--  <div class="top-header">
@@ -34,7 +36,7 @@
 
         <div class="collapse navbar-collapse justify-content-start" id="navbarSupportedContent">
           <ul class="navbar-nav">
-            <li><a class="nav-link nav_item" href="contact.html">컨텐츠</a></li>
+            <li><a class="nav-link nav_item" href="/content-list">컨텐츠</a></li>
             <li><a class="nav-link nav_item" href="/shop-list">편집샵 목록</a></li>
             <!--<li class="dropdown">
               <a class="dropdown-toggle nav-link" href="/shop-list" data-bs-toggle="dropdown">편집샵 목록</a>
@@ -50,14 +52,15 @@
                 </ul>
               </div>
             </li>-->
+
             <li><a class="nav-link nav_item" href="/introduce">서비스 소개</a></li>
 
-            <li class="d-none d-sm-block d-md-none">
-<!--              모바일에서만 표시-->
-              <li><hr></li>
-              <li><a class="nav-link nav_item .d-sm-none .d-md-block" href="/login">로그인</a></li>
-              <li><a class="nav-link nav_item .d-sm-none .d-md-block" href="/signup">회원가입</a></li>
-            </li>
+                <li class="d-block d-sm-none" id="mobile-menu">
+    <!--              모바일에서만 표시-->
+                  <li><hr></li>
+                  <li><a class="nav-link nav_item" href="/login" sec:authorize="isAnonymous()">로그인</a></li>
+                  <li><a class="nav-link nav_item" href="/signup" sec:authorize="isAnonymous()">회원가입</a></li>
+                </li>
           </ul>
         </div>
         <ul class="navbar-nav attr-nav align-items-center">
@@ -71,6 +74,7 @@
               </form>
             </div><div class="search_overlay"></div><div class="search_overlay"></div>-->
 
+          <div sec:authorize="isAnonymous()">
             <div class="d-none d-md-block d-xl-none d-xxl-none">
 <!--              모바일에서만 표시 안함-->
               <button class="btn-gray navbar-button me-1">
@@ -81,6 +85,13 @@
                 <a href="/login">로그인</a>
               </button>
             </div>
+          </div>
+
+              <td><span sec:authentication="name"></span></td>
+              <button class="btn-gray navbar-button me-1" sec:authorize="isAuthenticated()">
+                <a href="/mypage">마이페이지</a>
+<!--                <a href="/mypage">로그아웃</a>-->
+              </button>
 
           </li>
 
