--- a/src/main/resources/templates/admin/layout/default_layout.html
+++ b/src/main/resources/templates/admin/layout/default_layout.html
@@ -41,11 +41,11 @@
 <body class="sb-nav-fixed">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
 
-<div th:replace="/admin/fragments/header :: headerFragment"></div>
+<div th:replace="~{/admin/fragments/header :: headerFragment}"></div>
 
 
 <div id="layoutSidenav">
-	<div th:replace="/admin/fragments/sidebar :: sidebarFragment"></div>
+	<div th:replace="~{/admin/fragments/sidebar :: sidebarFragment}"></div>
 	<div id="layoutSidenav_content">
 		<main>
 			<div class="container-fluid">
@@ -57,7 +57,7 @@
 
 	<!--      <script th:src="@{/js/scripts.js}"></script>-->
 
-	<footer th:replace="/admin/fragments/footer :: footerFragment"></footer>
+	<footer th:replace="~{/admin/fragments/footer :: footerFragment}"></footer>
 </div>
 </body>
 </html>
