refactor: SelectShop 엔티티 내 image, brand를 연관관계 설정하여 CRUD 속도 개선

--- a/src/main/resources/templates/admin/content/pages/shop/create.html
+++ b/src/main/resources/templates/admin/content/pages/shop/create.html
@@ -288,6 +288,12 @@
 							<div class="col-7">
 								<label class="form-label" for="brandList">추가된 취급 브랜드</label>
 								<ul class="list-group" id="brandList">
+									<li class="list-group-item" th:each="brand : *{getBrand()}">
+										<input class="form-check-input me-1" type="checkbox" value="">
+										<input class="border-0" th:name="'brand[' + ${brandStat.index + ']'}"
+										       readonly="true"
+										       th:value="${brand}">
+									</li>
 								</ul>
 							</div>
 
